--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.6",
     "rimraf": "^4.1.2",
+    "spa-proxy": "^1.0.8",
     "web-vitals": "^3.1.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
