got most of the database in, issues with the json but we fix it another day

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "BackLogsDatabase": {
+    "ConnectionString": "mongodb+srv://laurencetimg:2iYho96jvgBZQjW0@backlogs.pry08nx.mongodb.net/",
+    "DatabaseName": "UserData",
+    "UserCollectionName": "UserInfo"
+  },
   "Logging": {
       "LogLevel": {
       "Default": "Information",
