MobyGames API key
Added MobyGames API key to appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApiSettings": {
+    "ApiKey": "moby_k4vejkMmn3bj1Ut3YCt7qy1JFve"
+  },
   "BackLogsDatabase": {
     "ConnectionString": "mongodb+srv://laurencetimg:2iYho96jvgBZQjW0@backlogs.pry08nx.mongodb.net/",
     "DatabaseName": "UserData",
