set up authenticaation

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,6 @@
 {
-  "BackLogsDatabase": {
-    "ConnectionString": "mongodb+srv://laurencetimg:2iYho96jvgBZQjW0@backlogs.pry08nx.mongodb.net/",
-    "DatabaseName": "UserData",
-    "UserCollectionName": "UserInfo"
+  "ConnectionString": {
+    "BackLogsDb" : "mongodb+srv://laurencetimg:2iYho96jvgBZQjW0@backlogs.pry08nx.mongodb.net/"
   },
   "Logging": {
       "LogLevel": {
