figured out some issues with login

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionString": {
-    "BackLogsDb" : "mongodb+srv://laurencetimg:2iYho96jvgBZQjW0@backlogs.pry08nx.mongodb.net/"
+  "ConnectionStrings": {
+    "BackLogsDb" : "mongodb+srv://laurencetimg:2iYho96jvgBZQjW0@backlogs.pry08nx.mongodb.net/?retryWrites=true&w=majority"
   },
   "Logging": {
       "LogLevel": {
