--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "autosuggest-highlight": "^3.3.4"
+    "autosuggest-highlight": "^3.3.4",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0"
   }
 }
