--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "autosuggest-highlight": "^3.3.4",
+    "jsonwebtoken": "^9.0.2",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0"
   }
