--- a/package.json
+++ b/package.json
@@ -1,10 +1,5 @@
 {
   "dependencies": {
-    "autosuggest-highlight": "^3.3.4",
-    "jsonwebtoken": "^9.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.18.0",
-    "react-router-dom": "^6.18.0"
+    "autosuggest-highlight": "^3.3.4"
   }
 }
