got game data to pull

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,6 @@
       }
     },
   "AllowedHosts": "*",
-  "JwtKey": "InsertKeyHere"
+  "JwtKey": "InsertKeyHere",
+  "MobyGamesKey": "moby_k4vejkMmn3bj1Ut3YCt7qy1JFve"
 }
