removed moby games

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,5 @@
       }
     },
   "AllowedHosts": "*",
-  "JwtKey": "InsertKeyHere",
-  "MobyGamesKey": "moby_k4vejkMmn3bj1Ut3YCt7qy1JFve"
+  "JwtKey": "InsertKeyHere"
 }
